--- a/src/App.css
+++ b/src/App.css
@@ -14,18 +14,18 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #e8dcc5;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: rgb(49, 36, 5);
 }
 
 .App-link {
-  color: #61dafb;
+  color: #1fe783;
 }
 
 @keyframes App-logo-spin {
